--- a/src/App.scss
+++ b/src/App.scss
@@ -115,8 +115,9 @@ textarea {
                         font-size: 1rem;
                         font-weight: 400;
                         width: 100%;
-                        height: fit-content;
-                        overflow: hidden;
+                        height: auto;
+                        max-height : 200px;
+                        overflow: auto;
                         word-wrap: break-word;
                         resize: none;
                         color: #222222;
@@ -384,11 +385,6 @@ textarea {
     }
 
 }
-
-@media screen and (max-width : $mediumScreen) {
-
-}
-
 
 @media screen and (max-width : $xSmallScreen) {
     
