--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -34,6 +34,17 @@
         align-items: center;
         justify-content: center;
 
+        .loading-screen {
+            position : absolute;
+            top: 0;
+            left : 0;
+            width : 100%;
+            height : 100%;
+            background: rgba(#000, 0.2);
+            display : flex;
+            align-items: center;
+            justify-content: center;
+        }
 
         .form-container {
             display: flex;
@@ -81,6 +92,16 @@
                         border: 1px solid darken($secondary-bg-color, 20);
                     }
 
+                }
+
+                .error-message {
+                    text-align: center;
+
+                    span {
+                        color: red;
+                        font-size: 1rem;
+
+                    }
                 }
 
                 .submit-btn {
