Adding Dark theme and enhancing styles

--- a/src/components/Notes/Note/Note.scss
+++ b/src/components/Notes/Note/Note.scss
@@ -1,4 +1,14 @@
 @import "../../../App.scss";
 
+.modal {
+    .note {
+        background: var(--note-color);
 
+        .item-footer {
 
+            background: var(--note-color);
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--note-color) 50%);
+            
+        }
+    }
+}
