--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,31 @@
 @import 'vars';
 
+:root {
+    --primary-background-color : #{$primary-bg-color-light};
+    --secondary-background-color : #{$secondary-bg-color-light};
+    --text-color : #{$text-color-light};
+    --header-color : #{$header-color-light};
+    --border-color : #{$border-color-light};
+    --note-color : #{$note-color-light};
+    --task-completed-color : #{$task-completed-color-light};
+    --task-incompleted-color : #{$task-incompleted-color-light};
+    --reminder-color : #{$reminder-color-light};
+    --reminder-passed-color : #{$reminder-passed-color-light};
+}
+
+.dark {
+    --primary-background-color : #{$primary-bg-color-dark};
+    --secondary-background-color : #{$secondary-bg-color-dark};
+    --text-color : #{$text-color-dark};
+    --border-color : #{$border-color-dark};
+    --header-color : #{$header-color-dark};
+    --note-color : #{$note-color-dark};
+    --task-completed-color : #{$task-completed-color-dark};
+    --task-incompleted-color : #{$task-incompleted-color-dark};
+    --reminder-color : #{$reminder-color-dark};
+    --reminder-passed-color : #{$reminder-passed-color-dark};
+}
+
 
 * {
     margin: 0;
@@ -13,8 +39,35 @@ html {
 }
 
 body {
-    background: $primary-bg-color;
+    background: var(--primary-background-color);
+    width: 100%;
+    min-height: 100vh;
+    transition: all 0.3s ease-out;
 }
+
+::-webkit-scrollbar{
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb{
+    background : var(--border-color);
+    border-radius: 8px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+input,
+textarea {
+    color: var(--text-color);
+    
+}
+
 
 button {
     background: none;
@@ -31,13 +84,15 @@ input[type=text],
 textarea {
     padding: 0.4rem 0.6rem;
     font-size: 1rem;
+
+    
 }
 
 
 .icon {
     width: 24px;
     height: 24px;
-    fill: $contrasting-color;
+    fill: var(--text-color);
 }
 
 .logo-section {
@@ -54,7 +109,6 @@ textarea {
     }
 
     h2 {
-        color: black;
         font-size: 2rem;
         letter-spacing: 2px;
 
@@ -81,14 +135,14 @@ textarea {
         align-items: center;
 
         .form-container {
-            width : 50%;
+            width: 50%;
             @include formWidth;
             height: auto;
 
             form.input-form {
                 display: flex;
                 flex-direction: column;
-                background-color: lighten($secondary-bg-color, 8);
+                background: var(--secondary-background-color);
                 height: auto;
                 width: 100%;
                 padding: 10px;
@@ -106,8 +160,13 @@ textarea {
                         font-size: 1.2rem;
                         font-weight: 700;
                         width: 100%;
-                        border-bottom: 1px solid $secondary-bg-color;
+                        border-bottom: 1px solid var(--border-color);
                         margin-bottom: 5px;
+
+                        &::placeholder {
+                            color: var(--text-color);
+                            opacity: 0.5;
+                        }
                     }
 
                     &[name="body"],
@@ -116,11 +175,15 @@ textarea {
                         font-weight: 400;
                         width: 100%;
                         height: auto;
-                        max-height : 200px;
+                        max-height: 200px;
                         overflow: auto;
                         word-wrap: break-word;
                         resize: none;
-                        color: #222222;
+                        
+                        &::placeholder {
+                            color: var(--text-color);
+                            opacity: 0.5;
+                        }
                     }
                 }
 
@@ -135,7 +198,7 @@ textarea {
                         letter-spacing: 1px;
                         font-weight: 700;
                         padding: 0.5rem 1rem;
-                        background: lighten($primary-accent-color, 8);
+                        background: $primary-accent-color;
                         width: 80px;
                         border-radius: 5px;
                         align-self: flex-end;
@@ -149,16 +212,13 @@ textarea {
 }
 
 .modal {
-    .note,
-    .reminder,
-    .task,
-    .shopping {
+
+   .item{
         width: 400px;
         @include itemWidth;
         height: 200px;
         overflow: hidden;
         padding: 10px;
-        background: lighten($note-accent-color, 10);
         border-radius: 10px;
         position: relative;
         transition: all 0.15s ease-out;
@@ -190,12 +250,10 @@ textarea {
                     font-size: 0.9rem;
                     font-weight: 400;
                     width: 100%;
-                    height: fit-content;
+                    // height: fit-content;
                     overflow: hidden;
                     word-wrap: break-word;
                     resize: none;
-                    color: #222222;
-
                 }
             }
 
@@ -210,8 +268,6 @@ textarea {
             position: absolute;
             bottom: 0;
             left: 0;
-            background: lighten($note-accent-color, 10);
-            background: linear-gradient(180deg, rgba(lighten($note-accent-color, 10), 0) 0%, rgba(lighten($note-accent-color, 10), 1) 40%);
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -253,10 +309,6 @@ textarea {
                         height: 20px;
                         pointer-events: none;
                     }
-
-                    &:hover {
-                        background: darken($note-accent-color, 10);
-                    }
                 }
 
             }
@@ -264,7 +316,7 @@ textarea {
 
         &:hover {
             .item-footer {
-                .modal-actions{
+                .modal-actions {
                     opacity: 1;
                 }
             }
@@ -284,10 +336,7 @@ textarea {
     align-items: center;
     justify-content: center;
 
-    .note,
-    .reminder,
-    .task,
-    .shopping {
+    .item{
 
         z-index: 4;
         width: 550px;
@@ -295,7 +344,6 @@ textarea {
         display: flex;
         flex-direction: column;
         padding: 10px;
-        background-color: lighten($secondary-bg-color, 5);
         border-radius: 10px;
         margin: 0 30px;
 
@@ -326,7 +374,7 @@ textarea {
                     font-size: 1.2rem;
                     font-weight: 700;
                     width: 100%;
-                    border-bottom: 1px solid $secondary-bg-color;
+                    border-bottom: 1px solid var(--border-color);
                     margin-bottom: 5px;
                 }
 
@@ -336,11 +384,10 @@ textarea {
                     font-weight: 400;
                     width: 100%;
                     height: fit-content;
-                    max-height : 400px;
+                    max-height: 400px;
                     overflow: auto;
                     word-wrap: break-word;
                     resize: none;
-                    color: #222222;
                 }
             }
 
@@ -362,7 +409,7 @@ textarea {
                     font-size: .7rem;
                     letter-spacing: 1px;
                     font-weight: 700;
-                    color: #555;
+                    // color: #555;
                 }
             }
 
@@ -372,9 +419,9 @@ textarea {
                     opacity: 1;
 
 
-                    &:hover {
-                        background: darken($secondary-bg-color, 10);
-                    }
+                    // &:hover {
+                    //     background: var(--secondary-background-color);
+                    // }
                 }
             }
 
@@ -387,9 +434,9 @@ textarea {
 }
 
 @media screen and (max-width : $xSmallScreen) {
-    
+
     .items-container {
-        display : flex;
+        display: flex;
         flex-direction: column;
         align-items: center;
     }
