--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,8 +3,8 @@
 .header {
     height: 70px;
     width: 100vw;
-    background: $primary-bg-color;
-    box-shadow: 0 0 2px;
+    background: var(--header-color);
+    box-shadow: 0 0 2px var(--border-color);
 
     .container {
         padding: 0 50px;
