--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,7 @@
 @import '../../App.scss';
 
 .home {
+    background: var(--primary-bg-color);
 
     .header {
         position: fixed;
@@ -32,6 +33,7 @@
     
 }
 
+
 @media screen and (max-width : $smallScreen){
     
     .home {
@@ -51,7 +53,7 @@
         .sidebar-opened{
             .sidebar-container{
                 left : 0;
-                background: #fff;
+                background: var(--header-color);
             }
 
             .main-container{
@@ -66,7 +68,7 @@
                     left : 0;
                     width : 100%;
                     height : 100%;
-                    background : rgba(#000, 0.2);
+                    background : rgba(#000, 0.4);
                     z-index : 1;
 
                 }
