--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -55,6 +55,9 @@
 
             .logo-section {
                 height: 10%;
+                h2{
+                    color : #000;
+                }
             }
 
             .form-body {
@@ -88,8 +91,8 @@
                         font-size: 14px;
                         padding: 0.7rem 0.4rem;
                         margin-bottom: 14px;
-                        background: lighten($secondary-bg-color, 3);
-                        border: 1px solid darken($secondary-bg-color, 20);
+                        background: lighten($secondary-bg-color-light, 3);
+                        border: 1px solid darken($secondary-bg-color-light, 20);
                     }
 
                 }
@@ -126,7 +129,7 @@
                         margin-top: 20px;
                         width: 100%;
                         height: 35px;
-                        background: darken($secondary-bg-color, 5);
+                        background: darken($secondary-bg-color-light, 5);
                         border: none;
                         font-size: 0.8rem;
                         letter-spacing: 1px;
@@ -153,11 +156,11 @@
 
         .slogan-typo {
             width: 450px;
-            color: $primary-accent-color;
             letter-spacing: 2px;
             line-height: 5.5rem;
-
+            
             h4 {
+                color: $primary-accent-color;
                 font-size: 3.5rem;
             }
 
