--- a/src/App.scss
+++ b/src/App.scss
@@ -211,6 +211,46 @@ textarea {
     }
 }
 
+.empty{
+    width : 100%;
+    height : 200px;
+    display : flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.6;
+
+    .icon{
+        width : 70px;
+        height : 70px;
+        margin : 10px;
+        fill : var(--border-color);
+    }
+    
+    .typo{
+        line-height : 3rem;
+        h4{
+            color : var(--border-color);
+            font-size : 2rem;
+        }
+        h5{
+            color : var(--border-color);
+            font-size : 1.5rem;
+        }
+    }
+}
+
+.loading{
+    width : 100%;
+    display : flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+
+    svg.MuiCircularProgress-svg{
+        color: var(--border-color);
+    }
+}
+
 .modal {
 
    .item{
@@ -440,5 +480,21 @@ textarea {
         flex-direction: column;
         align-items: center;
     }
-
+    .empty{
+    
+        .icon{
+            width : 40px;
+            height : 50px;
+        }
+        
+        .typo{
+            line-height : 3rem;
+            h4{
+                font-size : 1.5rem;
+            }
+            h5{
+                font-size : 1.2rem;
+            }
+        }
+    }
 }
