--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,7 +5,7 @@
 
     .header {
         position: fixed;
-        z-index: 3;
+        z-index: 4;
     }
 
     .home-body {
@@ -42,7 +42,7 @@
             .sidebar-container {
                 left: -300px;
                 bottom: 0;
-                z-index: 2;
+                z-index: 3;
             }
     
             .main-container {
@@ -57,19 +57,18 @@
             }
 
             .main-container{
-                pointer-events: none;
+                // pointer-events: none;
                 position: relative;
                 min-height : calc(100vh - 70px);
 
-                &::after{
-                    content : '';
+                .modal-container{
                     position : absolute;
                     top : 0;
                     left : 0;
                     width : 100%;
                     height : 100%;
                     background : rgba(#000, 0.4);
-                    z-index : 1;
+                    z-index : 2;
 
                 }
             }
