--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -44,6 +44,7 @@
             display : flex;
             align-items: center;
             justify-content: center;
+            z-index: 2;
         }
 
         .form-container {
@@ -112,12 +113,19 @@
 
                     .btn {
                         width: 100%;
-                        height: 35px;
+                        padding : 0.7rem;
                         background-color: $primary-accent-color;
-                        font-size: 1rem;
+                        font-size: 1.1rem;
                         font-weight: 700;
                         letter-spacing: 1px;
                     }
+                }
+
+                span{
+                    text-align : center;
+                    padding : 0.6rem;
+                    font-size : 1.2rem;
+                    font-weight: 600;
                 }
 
 
@@ -128,13 +136,31 @@
                     button {
                         margin-top: 20px;
                         width: 100%;
-                        height: 35px;
+                        padding : 0.6rem;
                         background: darken($secondary-bg-color-light, 5);
                         border: none;
-                        font-size: 0.8rem;
+                        font-size: 1rem;
                         letter-spacing: 1px;
                         font-weight: 700;
                         cursor: pointer;
+                    }
+                }
+                .google-btn{
+                    button{
+                        display : flex;
+                        align-items: center;
+                        justify-content: center;
+                        background: none;
+                        border : 1px solid rgb(87, 87, 87);
+                        width : 100%;
+                        font-size : 1.1rem;
+                        letter-spacing: 1px;
+                        font-weight: 600;
+                        padding : 0.7rem;
+
+                        .google-icon{
+                            margin-right : 12px;
+                        }
                     }
                 }
             }
