--- a/src/App.scss
+++ b/src/App.scss
@@ -220,8 +220,8 @@ textarea {
     opacity: 0.6;
 
     .icon {
-        width: 70px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
         margin: 10px;
         fill: var(--border-color);
     }
@@ -231,12 +231,7 @@ textarea {
 
         h4 {
             color: var(--border-color);
-            font-size: 2rem;
-        }
-
-        h5 {
-            color: var(--border-color);
-            font-size: 1.5rem;
+            font-size: 1.4rem;
         }
     }
 }
@@ -313,7 +308,7 @@ textarea {
             align-items: center;
             justify-content: space-between;
             z-index: 1;
-            transition: all 0.2s ease-out;
+            // transition: background 0.2s linear;
             width: 100%;
             height: 60px;
             pointer-events: none;
@@ -494,7 +489,6 @@ textarea {
     .modal {
 
         .item {
-            transition: background 0.2s ease-out;
 
             .item-footer {
                 pointer-events: all;
