--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -4,52 +4,56 @@
     width: $sidebarWidth;
     display: flex;
     flex-direction: column;
-    
-    .tab{
-        display : flex;
+
+    .tab {
+        display: flex;
         flex-direction: row;
         align-items: center;
-        width : 100%;
-        margin-top : 30px;
-        padding : 10px 0 10px 50px;
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0 10px 50px;
         border-radius: 0 30px 30px 0;
-        transition : all 0.2s ease-out;
+        transition: all 0.2s ease-out;
         cursor: pointer;
-        &:hover{
-            background : var(--secondary-background-color);
-        }
-        
-        
-        .icon{
-            margin-right : 15px;
-            width : 24px;
-            height : 24px;
-            pointer-events: none;
-        }
-        
-        h4{
-            pointer-events: none;
 
+        &:hover {
+            background: var(--secondary-background-color);
         }
-        
-        
+
+        h4 {
+            pointer-events: none;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+        }
+
+        &.nightmode-tab {
+            justify-content: space-between;
+
+            &:hover {
+                background: none;
+                cursor: default;
+
+            }
+        }
+
     }
-    
-    .active{
-        background :rgba($primary-accent-color, 0.3);
+
+    .active {
+        background: rgba($primary-accent-color, 0.3);
         cursor: default;
-        &:hover{
-            background : rgba($primary-accent-color, 0.3);
+
+        &:hover {
+            background: rgba($primary-accent-color, 0.3);
         }
     }
 }
 
 
 
-@media screen and (max-width : $smallScreen){
-    .sidebar{
-        .tab{
-            padding : 10px 0 10px 30px;
+@media screen and (max-width : $smallScreen) {
+    .sidebar {
+        .tab {
+            padding: 10px 0 10px 30px;
 
         }
     }
