--- a/src/components/Switcher/Switcher.scss
+++ b/src/components/Switcher/Switcher.scss
@@ -5,9 +5,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
-
-    .icon{}
 
     .switch-container{
         padding: 3px;
@@ -22,11 +19,13 @@
             transition : all 0.2s ease-out;
             width : 18px;
             height : 18px;
-            background : $primary-accent-color;
             border-radius: 50%;
+            background : #000;
+
         }
         .toggler-right{
             transform : translateX(30px);
+            background : $primary-accent-color;
       
         }
     }
