--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -1,11 +1,11 @@
 //* Main Colors
-$logo-color : #f3a310;
-$primary-accent-color : #F6C262;
+$logo-color : #4a76f0;
+$primary-accent-color : #89a2f7;
 
 
 //* light theme colors
 $primary-bg-color-light : #ffffff;
-$secondary-bg-color-light : #f8f8f8;
+$secondary-bg-color-light : #f0f0f0;
 $header-color-light : #f8f8f8;
 $text-color-light : #0f0f0f;
 $border-color-light : #A7A7A7;
@@ -26,7 +26,7 @@ $note-color-dark : #6b6418;
 $task-completed-color-dark : #2b5a37;
 $task-incompleted-color-dark : #552f2f;
 $reminder-color-dark : #2f446e;
-$reminder-passed-color-dark : #552f2f;
+$reminder-passed-color-dark : #552f2f; 
 
 //* Breakpoints
 $xLargeScreen : 1600px;
