--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -4,6 +4,8 @@
     width: $sidebarWidth;
     display: flex;
     flex-direction: column;
+    background-color: var(--header-color);
+    height: 100vh;
 
     .tab {
         display: flex;
@@ -12,7 +14,7 @@
         width: 100%;
         margin-top: 30px;
         padding: 10px 0 10px 50px;
-        border-radius: 0 30px 30px 0;
+        // border-radius: 0 30px 30px 0;
         transition: all 0.2s ease-out;
         cursor: pointer;
 
