--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -26,7 +26,7 @@
             transition: all 0.2s linear;
             width: calc(100% - 250px);
             margin: $headerHeight 0 0 auto;
-            padding: 30px;
+            padding: 50px 50px 30px 30px;
         }
     }
 
