--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,6 +5,37 @@
     flex-direction: column;
     width: 100%;
 
+    .pass-successfull-change{
+        background-color: rgb(202, 202, 202) ;
+        transform: translateX(-50%);
+        color: rgb(13, 151, 13);
+        padding: 1rem 2rem;
+        font-size: 1.4rem;
+        position: absolute;
+        left: 50%;
+        top: 10%;
+        opacity: 0;
+        transition: all 0.4s ease-out;
+
+        &.active{
+            opacity: 1;
+        }
+    }
+
+    .btn {
+        background-color: rgb(116, 116, 116);
+        padding: 0.4rem 0.6rem;
+        font-weight: 600;
+        font-size: 1rem;
+        color: white;
+        letter-spacing: 1px;
+        border-radius: 5px;
+
+        &#change-password {
+            width: 180px;
+        }
+    }
+
 
     .upper-section {
         display: flex;
@@ -34,6 +65,71 @@
             display: flex;
             flex-direction: column;
             margin-top: auto;
+
+            .change-password {
+                margin-left: auto;
+
+                .password-modal {
+                    opacity: 0;
+                    pointer-events: none;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100vw;
+                    height: 100vh;
+                    background-color: rgba(29, 29, 29, 0.8);
+                    z-index: 2;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    transition: all 0.2s ease-out;
+
+                    &.active {
+                        opacity: 1;
+                        pointer-events: all;
+                    }
+
+                    .password-form {
+                        background-color: var(--secondary-background-color);
+                        width: 300px;
+                        height: auto;
+                        padding: 1.5rem;
+
+
+                        .input-data {
+                            margin-bottom: 1rem;
+
+                            h5 {
+                                margin-bottom: 8px;
+                            }
+
+                            input {
+                                width: 100%;
+                                padding: 0.4rem;
+                                color: #000;
+                            }
+                        }
+
+                        .password-save-btn {
+                            padding: 0.4rem;
+                            width: 100%;
+                            background-color: $primary-accent-color;
+                            font-size: 1rem;
+                            font-weight: 600;
+                            letter-spacing: 1px;
+                            margin-top: 1rem;
+                        }
+
+                        .error{
+                            text-align: center;
+                            color: rgb(255, 45, 45);
+                            font-size: 0.8rem;
+                            font-weight: 600;
+                        }
+
+                    }
+                }
+            }
 
 
             .name {
@@ -89,15 +185,17 @@
                 margin-bottom: 10px;
             }
 
-            .btn {
-                background-color: rgb(116, 116, 116);
-                padding: 0.4rem 0.6rem;
-                font-weight: 600;
-                font-size: 1rem;
-                color: white;
-                letter-spacing: 1px;
-                border-radius: 5px;
+            input {
+                margin-right: 1rem;
+                padding: 0.4rem 0.5rem;
+                font-size: 14px;
+                color: var(--text-color);
+                background-color: var(--secondary-background-color);
+                border: none;
+                border-radius: 4px;
             }
+
+
         }
     }
 }
