--- a/src/App.scss
+++ b/src/App.scss
@@ -9,8 +9,6 @@
     --note-color : #{$note-color-light};
     --task-completed-color : #{$task-completed-color-light};
     --task-incompleted-color : #{$task-incompleted-color-light};
-    --reminder-color : #{$reminder-color-light};
-    --reminder-passed-color : #{$reminder-passed-color-light};
 }
 
 .dark {
@@ -22,8 +20,7 @@
     --note-color : #{$note-color-dark};
     --task-completed-color : #{$task-completed-color-dark};
     --task-incompleted-color : #{$task-incompleted-color-dark};
-    --reminder-color : #{$reminder-color-dark};
-    --reminder-passed-color : #{$reminder-passed-color-dark};
+
 }
 
 
@@ -89,6 +86,8 @@ textarea {
 }
 
 
+
+
 .icon {
     width: 24px;
     height: 24px;
@@ -117,10 +116,9 @@ textarea {
 
 .items-container {
     margin-top: 30px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
-    justify-items: center;
 }
 
 .tab-page {
@@ -251,7 +249,7 @@ textarea {
 .modal {
 
     .item {
-        width: 400px;
+        width: 240px;
         @include itemWidth;
         height: 200px;
         overflow: hidden;
@@ -297,7 +295,7 @@ textarea {
         }
 
         &:hover {
-            box-shadow: 1px 1px 3px;
+            box-shadow: 0 0 4px #999;
         }
 
         .item-footer {
@@ -308,7 +306,6 @@ textarea {
             align-items: center;
             justify-content: space-between;
             z-index: 1;
-            // transition: background 0.2s linear;
             width: 100%;
             height: 60px;
             pointer-events: none;
